@@ -4,3 +4,7 @@ SELECT 1;
 SELECT affected_rows;
 rows
 NULL
+SET @a = 1;
+SELECT affected_rows;
+rows
+0
